if/c#/hpdf.cs


    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetHeight(IntPtr page, float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetSize(IntPtr page,
            HPdfPageSizes size, HPdfPageDirection direction);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetRotate(IntPtr page, ushort angle);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_Page_CreateDestination(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_Page_CreateTextAnnot(IntPtr page,
        HPdfRect rect, string text, IntPtr encoder);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_Page_CreateLinkAnnot(IntPtr page,
        HPdfRect rect, IntPtr dst);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_Page_CreateURILinkAnnot(IntPtr page,
        HPdfRect rect, string url);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_TextWidth(IntPtr page,
        string text);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_MeasureText(IntPtr page,
        string text, float width, int wordwrap, ref float real_width);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetWidth(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetHeight(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static ushort HPDF_Page_GetGMode(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfPoint HPDF_Page_GetCurrentPos(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfPoint HPDF_Page_GetCurrentTextPos(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static IntPtr HPDF_Page_GetCurrentFont(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetCurrentFontSize(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfTransMatrix HPDF_Page_GetTransMatrix(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetLineWidth(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfLineCap HPDF_Page_GetLineCap(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfLineJoin HPDF_Page_GetLineJoin(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetMiterLimit(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfDashMode_Internal HPDF_Page_GetDash(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetFlat(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetCharSpace(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetWordSpace(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetHorizontalScalling(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetTextLeading(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfTextRenderingMode HPDF_Page_GetTextRenderingMode(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetTextRaise(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfRGBColor HPDF_Page_GetRGBFill(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfRGBColor HPDF_Page_GetRGBStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfCMYKColor HPDF_Page_GetCMYKFill(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfCMYKColor HPDF_Page_GetCMYKStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetGrayFill(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static float HPDF_Page_GetGrayStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfColorSpace HPDF_Page_GetStrokingColorSpace(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfColorSpace HPDF_Page_GetFillingColorSpace(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static HPdfTransMatrix HPDF_Page_GetTextMatrix(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_GetGStateDepth(IntPtr page);

/*--- General graphics state -----------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetLineWidth(IntPtr page,
                float line_width);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetLineCap(IntPtr page,
                HPdfLineCap line_cap);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetLineJoin(IntPtr page,
                HPdfLineJoin line_join);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetMiterLimit(IntPtr page,
                float miter_limit);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetDash(IntPtr page,
                ushort[] array, uint num_param, uint phase);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetFlat(IntPtr page,
                float flatness);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetExtGState(IntPtr page,
                IntPtr ext_gstate);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_GSave(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_GRestore(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Concat(IntPtr page,
            float a, float b, float c, float d, float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_MoveTo(IntPtr page,
            float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_LineTo(IntPtr page,
            float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_CurveTo(IntPtr page,
            float x1, float y1, float x2, float y2, float x3, float y3);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_CurveTo2(IntPtr page,
            float x2, float y2, float x3, float y3);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_CurveTo3(IntPtr page,
            float x1, float y1, float x3, float y3);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ClosePath(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Rectangle(IntPtr page,
            float x, float y, float width, float height);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Stroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ClosePathStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Fill(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Eofill(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_FillStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_EofillStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ClosePathFillStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ClosePathEofillStroke(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_EndPath(IntPtr page);

/*--- Clipping paths operator --------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Clip(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_Eoclip(IntPtr page);

/*--- Text object operator -----------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_BeginText(IntPtr page);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_EndText(IntPtr page);

/*--- Text state ---------------------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetCharSpace(IntPtr page,
                float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetWordSpace(IntPtr page,
                float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetHorizontalScalling(IntPtr page,
                float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetTextLeading(IntPtr page,
                float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetFontAndSize(IntPtr page,
                IntPtr hfont, float size);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetTextRenderingMode(IntPtr page,
                HPdfTextRenderingMode  mode);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetTextRaise(IntPtr page,
                float value);

/*--- Text positioning ---------------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_MoveTextPos(IntPtr page,
            float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_MoveTextPos2(IntPtr page,
            float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetTextMatrix(IntPtr page,
            float a, float b, float c, float d, float x, float y);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_MoveToNextLine(IntPtr page);

/*--- Text showing -------------------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ShowText(IntPtr page,
                string text);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ShowTextNextLine(IntPtr page,
                string text);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ShowTextNextLineEx(IntPtr page,
                float word_space, float char_space, string text);

/*--- Color showing ------------------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetGrayFill(IntPtr page,
                float gray);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetGrayStroke(IntPtr page,
                float gray);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetRGBFill(IntPtr page,
                float r, float g, float b);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetRGBStroke(IntPtr page,
                float r, float g, float b);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetCMYKFill(IntPtr page,
                float c, float m, float y, float k);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_SetCMYKStroke(IntPtr page,
                float c, float m, float y, float k);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_ExecuteXObject(IntPtr page,
                IntPtr obj);

/*---------------------------------------------------------------------*/

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Page_DrawImage(IntPtr page,
                IntPtr image, float x, float y, float width, float height);
